# otk-pyoptix

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-wheels.yml
examples/: curves.cu  curves.py  hello.py  path_util.py  simpleMotionBlur.py  sphere.cu  sphere.py  triangle.cu  triangle.py
optix/: .gitignore  CMakeLists.txt  main.cpp  setup.py
optix/CMake/: FindOptiX.cmake
optix/optix_pkg/: __init__.py
src/optix/: __init__.py
test/: test_module.py  test_program_group.py
test/util/: tutil.py
